--- a/buildblog-html/css/application.css
+++ b/buildblog-html/css/application.css
@@ -41,31 +41,28 @@ div.footer {
 }
 div.nav {
     float: left;
-    max-width: 160px;
+
+    max-width: 180px;
     margin: 0;
     padding: 1em;
     font-size: 20px;
 
 }
-/*#navigation ul {
+#navigation ul {
     list-style-type: none;
     padding: 0;
 }
 #navigation ul a {
     text-decoration: none;
-}*/
+}
 div.story {
-    margin-left: 170px;
-   /* border-left: 1px solid gray;*/
+    margin-left: 250px;
+    max-width: 800px;
+    /*border-left: 1px solid gray;*/
     overflow: hidden;
     /*padding: 10px 50px 25px;*/
     /*border: 1px solid gray;*/
     margin-top:50px
-}
-div.box
-{
-    border: 1px solid gray;
-
 }
 
 
@@ -83,6 +80,19 @@ div.login {
 
 #logout{
     float: right;
+}
+
+#date{
+    float : right;
+}
+
+.blogTitle{
+    color: #999999;
+    font-family: arial, sans-serif;
+    font-size: 50px;
+    font-weight: bold;
+    margin-top: 0px;
+    margin-bottom: 1px;
 }
 
 
