--- a/buildblog-html/css/application.css
+++ b/buildblog-html/css/application.css
@@ -41,7 +41,6 @@ div.footer {
 }
 div.nav {
     float: left;
-
     max-width: 180px;
     margin: 0;
     padding: 1em;
@@ -65,6 +64,9 @@ div.story {
     margin-top:50px
 }
 
+hr.horizontal {
+    border-top: 1px dashed #8c8b8b;
+}
 
 div.login {
     margin-left: 170px;
@@ -85,6 +87,8 @@ div.login {
 #date{
     float : right;
 }
+
+
 
 .blogTitle{
     color: #999999;
